Archive2/20/f6ca9dfb4d2dd9/output
main.cpp:2:6: warning: ISO C++ forbids declaration of 'main' with no type [-Wpedantic]
 main(){
      ^
main.cpp: In function 'int main()':
main.cpp:6:1: error: expected '}' at end of input
 }
 ^
